--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,5 +15,5 @@ jobs:
       - name: Login Docker Hub
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
