--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,3 +17,20 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: docker buildx
+        uses: docker/build-push-action@v3
+        id: buildx
+      
+      - name: build and push docker image
+        uses: docker/build-push-action@v3
+        id: docker_build
+        with:
+          context: ./
+          file: ./Dockerfile
+          builder: ${{ steps.buildx.outputs.name }}
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/flask-helloworld
+        
+      - name: Verify
+        run: echo ${{ steps.docker_build.outputs.digest }}
