--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -31,7 +31,7 @@ jobs:
             ${{ runner.os }}-buildx-
       
       - name: build and push docker image
-        uses: docker/build-push-action@v3
+        uses: docker/buildx-action@v3 #docker/build-push-action@v3
         id: docker_build
         with:
           context: ./
