--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,9 +1,7 @@
-name: flaks-helloworld
-
+name: flask-helloworld
 on:
   push:
     branches: [ master ]
-
 jobs:
   docker:
     runs-on: ubuntu-latest
@@ -11,14 +9,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-
       - name: Login Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: docker buildx
+      - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v1
         id: buildx
 
@@ -29,9 +26,9 @@ jobs:
           key: ${{ runner.os }}-buildx-${{ github.sha }}
           restore-keys: |
             ${{ runner.os }}-buildx-
-      
-      - name: build and push docker image
-        uses: docker/buildx-action@v1 #docker/build-push-action@v3
+
+      - name: Build and Push Docker Image
+        uses: docker/build-push-action@v3
         id: docker_build
         with:
           context: ./
@@ -41,6 +38,6 @@ jobs:
           tags: ${{ secrets.DOCKER_USERNAME }}/flask-helloworld
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
-   
+
       - name: Verify
         run: echo ${{ steps.docker_build.outputs.digest }}
