--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -35,8 +35,9 @@ jobs:
           file: ./Dockerfile
           builder: ${{ steps.buildx.outputs.name }}
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/flask-helloworld
-          tags: ${{ secrets.DOCKER_USERNAME }}/flask-helloworld:${{ github.run_number }}
+          tags: |
+              ${{ secrets.DOCKER_USERNAME }}/flask-helloworld
+              ${{ secrets.DOCKER_USERNAME }}/flask-helloworld:${{ github.run_number }}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
 
