--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -9,6 +9,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: Install jq
+        run: sudo apt-get install jq
+
+
       - name: Login Docker Hub
         uses: docker/login-action@v3
         with:
@@ -42,4 +46,16 @@ jobs:
           cache-to: type=local,dest=/tmp/.buildx-cache
 
       - name: Verify
-        run: echo ${{ steps.docker_build.outputs.digest }}
+        run: |
+          LATEST_DIGEST=$(docker manifest inspect ${{ secrets.DOCKER_USERNAME }}/flask-helloworld:latest | jq -r '.config.digest')
+          RUN_NUMBER_DIGEST=$(docker manifest inspect ${{ secrets.DOCKER_USERNAME }}/flask-helloworld:${{ github.run_number }} | jq -r '.config.digest')
+          
+          echo "Latest Image Digest: $LATEST_DIGEST"
+          echo "Run Number Image Digest: $RUN_NUMBER_DIGEST"
+
+          if [ "$LATEST_DIGEST" == "$RUN_NUMBER_DIGEST" ]; then
+            echo "Image digests match."
+          else
+            echo "Image digests do not match."
+            exit 1
+          fi
